# Web_Observation_and_API_Usage

./: pyproject.toml  requirements.txt
bonus/: bonus.py
data/: cuaca.csv  economic_data.csv  fakestore_bs_products.csv  fakestore_mock.html  indonesia_pipeline.db  indonesian_news_metrics.csv
level1/: level1-b.py  level1.py
level2/: level2-task5.py  level2-task6.py  level2.py
level3/: level3-task7.py  level3-task8.py  level3.py
reports/: indonesia_data.json  indonesian_news.json  realtime_dashboard.json  report.html
