[project]
name = "web_scraping_and_api_for_indonesian_data"
version = "0.1.0"
description = ""
authors = [
    {name = "nng777",email = "nikodemusng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.31.0)",
    "beautifulsoup4 (>=4.12.0)",
    "pandas (>=2.0.0)",
    "numpy (>=1.24.0)",
    "lxml (>=4.9.0)",
    "html5lib (>=1.1)",
    "openpyxl (>=3.1.0)",
    "xlsxwriter (>=3.1.0)",
    "matplotlib (>=3.7.0)",
    "seaborn (>=0.12.0)",
    "selenium (>=4.15.0)",
    "webdriver-manager (>=4.0.0)",
    "aiohttp (>=3.8.0)",
    "nltk (>=3.8.0)",
    "textblob (>=0.17.0)",
    "schedule (>=1.2.0)",
    "apscheduler (>=3.10.0)",
    "pytest (>=7.4.0)",
    "pytest-cov (>=4.1.0)",
    "black (>=23.0.0)",
    "flake8 (>=6.0.0)",
    "python-dotenv (>=1.0.0)",
    "tqdm (>=4.66.0)",
    "colorama (>=0.4.6)",
    "rich (>=13.0.0)",
    "python-dateutil (>=2.8.0)",
    "jsonschema (>=4.19.0)",
    "pyyaml (>=6.0.0)",
    "loguru (>=0.7.0)",
    "babel (>=2.12.0)",
    "langdetect (>=1.0.9)",
    "scikit-learn (>=1.3.0)",
    "sqlalchemy (>=2.0.0)",
    "pymongo (>=4.5.0)",
    "pillow (>=10.0.0)",
    "jupyter (>=1.0.0)",
    "ipython (>=8.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
